2010-04-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Enable 64-bit file offsets.

	* base.h (_FILE_OFFSET_BITS): New #define.

2010-04-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Make ‘tiny_branches’ global.

	* base.h (tiny_branches): New var decl (via ‘TINY_DECL’).
	* b-anchor.c (tiny_branches): New var (via ‘TINYK’).
	* rcssyn.c (tiny_branches): Delete static var.

2010-04-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘obstack-printf’.

	* b-divvy.c (accf): New func.
	(accumulate_nonzero_bytes): Delete func.
	* b-divvy.h (accf): New func decl.
	(accumulate_nonzero_bytes): Delete func decl.
	(accs): New macro.
	* b-feph.c (jam_sff): Use ‘accf’.
	* ci.c (ACCB, ACCS): Delete macros.
	(ACCF): New macro.
	(JAM, ADD, incnum, getlogmsg): Use ‘ACCF’.
	* co.c (buildjoin): Use ‘accf’.
	* merger.c (normalize_arg): Likewise.
	* rcsdiff.c (setup_label, main): Likewise.
	* rcsedit.c (naturalize, rcswriteopen): Use ‘accs’.
	* rcsfnms.c (getfullRCSname): Use ‘accf’.
	* rcslex.c (getphrases): Use ‘accs’.
	* rcsrev.c (accumulate_branchno): Likewise.
	(fully_numeric): Use ‘accf’, ‘accs’.
	* rcsutil.c (minus_p, accumulate_arg_quoted): Use ‘accf’.
	(runv): Use ‘accs’, ‘accf’.
	* rlog.c (getnumericrev): Use ‘accf’.

2010-04-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Tighten ‘InitAdmin’.

	* rcsfnms.c (bindex, suffix_matches): Delete func.
	(InitAdmin): Use ‘strrchr’, ‘strcasecmp’.

2010-04-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use tinysym for parsing "RCS file keywords".

	* b-anchor.c (TINY_INIT, TINYK): New macros.
	(tiny_ciklog, tiny_access, tiny_author, tiny_branch, tiny_comment)
	(tiny_date, tiny_desc, tiny_expand, tiny_head, tiny_locks, tiny_log)
	(tiny_next, tiny_state, tiny_strict, tiny_symbols, tiny_text):
	New ‘struct tinysym’ objects, via ‘TINY_DECL’, ‘TINYK’.
	(looking_at): New func.
	* base.h (KS): Delete macro.
	(Kaccess, Kauthor, Kbranch, Kcomment, Kdate, Kdesc)
	(Kexpand, Khead, Klocks, Klog, Knext, Kstate, Kstrict)